<?xml version="1.0"?>
<package format="2">
  <name>kadai_pkg</name>
  <version>1.0.0</version>
  <description>Robot-system kadai2</description>

  <maintainer email="s17c1126dv@s.chibakoudai.jp">Mito Myojin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
